<resources>

    <string name="app_name">Embassa\'t</string>

    <!-- MAIN -->
    <string name="main_option_info">Info</string>
    <string name="main_option_artists">Artistes</string>
    <string name="main_option_schedule">Horaris</string>
    <string name="main_option_map">Mapa</string>
    <string name="main_option_tickets">Entrades</string>
    <string name="main_option_playlist">Playlist</string>
    <string name="main_option_extra">Petit EM\'</string>
    <string name="main_option_transport">Transport</string>

    <!-- INFORMACIÓ -->
    <string name="title_activity_info">Info</string>

    <string name="info_first_section_title">Q u è&#160;&#160;&#160;é s&#160;&#160;&#160;l\' E m b a s s a\' t?</string>
    <string name="info_first_section_content">La vuitena edició de l\'Embassa\'t no és només un pas més, després d\'una llarga espera de 365 dies per molt que ens movem de lloc, a nosaltres ens continua movent el mateix que el primer dia: donar autèntic sentit a la paraula festival i vestir la nostra ciutat, encara que sigui per només unes hores, de música i alegria sense parar. Reivindicant espais, músics, maneres d\'oci diferents, cultura i filosofia, un pensament positiu que vol encomanar el bon humor i la passió per la música des dels més petits als més grans. Intentant arribar al màxim de gent i estils possibles. Des dels concerts principals a Can Marcet, la inauguració al Museu del Gas com els vermuts gratuïts al centre de Sabadell, no hi ha excusa per no fer Embassa\'t, aquesta és la qüestió.</string>
    <string name="info_first_section_sub">Fem festival i fem molt més. Consulta la programació anual a www.embassat.com</string>


    <string name="info_second_section_title">E s c e n a r i&#160;&#160;&#160;P r i n c i p a l</string>
    <string name="info_second_section_content">Dins dels magnífics Jardins de l\'Espai Cultura de la Fundació Sabadell 1859 pugen a l\'escenari les propostes més fermes de l\'escena del moment. Bandes que fa anys que criden un nom i un lloc, fins a grups més joves amb un insultant descaro, és aquí i ara on juguen les millors cartes. Sens dubte on es viu l\'esclat del festival i on sempre podràs dir que hauràs vist els millors grups del demà.  Aforament 1.000 persones.</string>

    <string name="info_third_section_title">A m f i t e a t r e</string>
    <string name="info_third_section_content">Dins el recinte principal tenim la petita joia del festival. Les grades, la buguenvíl·lia, la llum, l\'atmosfera que es palpa concert rere concert fan que des de les propostes més íntimes, al folk, cantautors, l\'electrònica soft o més dura, al rock directe, garage o punk tinguin un contacte que mai abans hauràs viscut. Tota una experiència musical. Aforament amb butaca limitat 300 persones aproximadament.</string>

    <string name="info_fourth_section_title">M i r a d o r&#160;&#160;&#160;e l e c t r ò n i c</string>
    <string name="info_fourth_section_content">El Museu del Gas acull a dalt de tot del seu modern edifici un espai envejable, tan per les seves vistes com per la seva cuidada proposta. Una finestra oberta a la emergent electrònica barcelonina que ens acosta les sonoritats, bits i ritmes més contemporanis per contemplar el panorama que vindrà. Cinc hores diàries per submergir-nos en aquest fascinant univers. La cirereta més exclusiva del festival. Fins a completar aforament, 250 persones.</string>

    <!-- ARTISTS -->
    <string name="title_activity_artists">Artistes</string>
    <string name="artist_fav_option_title">Favorit</string>

    <!-- HORARIS -->
    <string name="title_activity_horaris">Horaris</string>
    <string name="horaris_tab0">Dimecres</string>
    <string name="horaris_tab1">Dijous</string>
    <string name="horaris_tab2">Divendres</string>
    <string name="horaris_tab3">Dissabte</string>
    <string name="horaris_tab4">Diumenge</string>

    <string name="horaris_escenari1">Mirador</string>
    <string name="horaris_escenari2">Amfiteatre Yeearphone</string>
    <string name="horaris_escenari3">Escenari Gran</string>

    <!-- MAP -->
    <string name="title_activity_map">Mapa</string>

    <!-- ENTRADES -->
    <string name="title_activity_tickets">Entrades</string>
    <string name="tickets_subtitle_1">Abonament 3 dies</string>

    <string name="tickets_content_1_1"><u>30€ Anticipada</u></string>
    <string name="tickets_content_1_2">40€ a Taquilla</string>

    <string name="tickets_subtitle_2">Entrada d\'un dia</string>

    <string name="tickets_content_2_1"><u>20€ Anticipada</u></string>
    <string name="tickets_content_2_2">25€ a Taquilla</string>

    <string name="tickets_subtitle_3">Petit EM\'</string>

    <string name="tickets_content_3_1"><u>10€ Anticipada</u></string>

    <string name="tickets_content_3">* Aforament limitat</string>

    <!-- EXTRES -->
    <string name="title_activity_extres">Petit EM\'</string>
    <string name="title_activity_transport">Transport</string>

    <string name="petitem_title">Petit Embassa\'t</string>
    <string name="transport_title">Transport</string>
    <string name="transport_text">Sigues sostenible i vine a peu, amb bicicleta o transport públic:</string>
    <string name="transport_optionc">- Just a 2 minuts de la parada Sabadell Estació S2 FGC.\n- Si vens amb cotxe. Entrada Sabadell Centre de la C-58, hi ha amplia zona de pàrking gratuïta ben a prop del recinte.</string>
    <string name="petitem_schedule">Dissabte 11 de Juny de 17:00 a 20:00</string>
    <string name="petitem_text">Conviure, compartir, créixer, enriquir, gaudir, recordar… hi ha mil i un moments especials per pares i fills, és per això que també volem tenir una primera experiència amb el festival, els concerts, la música, amics, família, tallers, experiències, sensacions diferents en una jornada extraordinària per tots. El Petit Embassa\'t vol ser tot això, però de ben segur que per cadascuna de les famílies pot arribar a ser molt més. Veniu a passar la tarda amb tota aquesta programació pensada pels més petits que de ben segur farà gaudir als més grans.</string>
    <string name="petitem_music">TALLERS MUSICALS:\n- Construcció de sonalls\n- El rocker del Embassa\'t\n- Taumàtrop\n- Caminant per les sensacions</string>
    <string name="petitem_acting">ACTUACIONS: (amb link a cada artista)\n- Albercocks\n- Inspira\n- Ran Ran Ran</string>



    <string name="extres_item_title_1">After party</string>
    <string name="extres_item_day_1">Divendres i dissabte</string>
    <string name="extres_item_time_1">03:00 – 05:30</string>
    <string name="extres_item_place_1">Kräsna</string>

    <string name="extres_item_title_2">Dissabte</string>
    <string name="extres_item_time_2">18:00 – 21:30</string>
    <string name="extres_item_place_2">Petit EM\'</string>

    <string name="extres_text_1_a">Si estàs consultant aquest apartat possiblement és perquè encara no has tingut prou festa. Si has d\'esperar al primer tren, la connexió del nit bus o simplement no voldries que s\'acabessin les nits del EMBASSA\'T, has clicat al lloc correcte. És aquí on acabarem tots: públic i músics brindant per més música.</string>
    <string name="extres_text_1_b">Divendres 12 serà el torn de Dj CAPO. La millor manera per acabar la festa amb els hits d\'ahir, d\'avui i potser de demà.</string>
    <string name="extres_text_1_c">Dissabte 13 el tàndem el completarà JMII i Hal9000 dues maneres complementàries per entendre la nit. Des de la vessant més electrònica i ballable, fins als clàssics del rock més imperdonables i que no poden fallar quan parlem d\'una gran festa. La cirereta del festival.</string>

    <string name="extres_text_2_a">El primer festival per tota la família. Una experiència perquè grans i petits comparteixin un espai i una experiència única. Per quart any consecutiu el dissabte de festival dedicarà les primeres hores de la tarda al públic més petit de la casa. Tres hores de tallers, jocs, photocall i interaccions que buscaran acostar la música i l\'esbarjo entre el nou públic.</string>
    <string name="extres_text_2_b">18:00h. - Dàmaris Gelabert (Gira cançons per Aprendre)</string>
    <string name="extres_text_2_c">18:30h. - Obertura Espai Petit Embassa\'t</string>
    <string name="extres_text_2_d">19:00h. - Polpax dj</string>
    <string name="extres_text_2_e">19:45h. - Núria Graham</string>
</resources>
