<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/black">
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_info"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_info"/>
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_artists"
        android:layout_marginTop="@dimen/main_option_text_margin_top"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_artists"/>
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_schedule"
        android:layout_marginTop="@dimen/main_option_text_margin_top"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_schedule"/>
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_extra"
        android:layout_marginTop="@dimen/main_option_text_margin_top"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_extra"/>
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_transport"
        android:layout_marginTop="@dimen/main_option_text_margin_top"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_transport"/>
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_map"
        android:layout_marginTop="@dimen/main_option_text_margin_top"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_map"/>
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_tickets"
        android:layout_marginTop="@dimen/main_option_text_margin_top"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_tickets"/>
    <com.embassat.view.NoeDisplayTextView
        android:id="@+id/main_option_playlist"
        android:layout_marginTop="@dimen/main_option_text_margin_top"
        style="@style/MainMenuOptionText"
        android:text="@string/main_option_playlist"/>
</LinearLayout>