<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tickets_subtitle_1"
            style="@style/InfoTitle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>

        <TextView
            android:text="@string/tickets_content_1_1"
            android:id="@+id/compra_abonament_button"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tickets_content_1_2"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>

        <TextView
            android:text="@string/tickets_subtitle_2"
            style="@style/InfoTitle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>

        <TextView
            android:text="@string/tickets_content_2_1"
            android:id="@+id/compra_entrada_dia_button"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tickets_content_2_2"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>

        <TextView
            android:text="@string/tickets_subtitle_3"
            style="@style/InfoTitle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>

        <TextView
            android:text="@string/tickets_content_3_1"
            android:id="@+id/compra_hotel_button"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>

        <TextView
            android:text="@string/tickets_content_3_2"
            android:id="@+id/compra_descompte_button"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>