<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MergeRootFrame">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/embassat_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:text="@string/info_first_section_title"
            style="@style/InfoTitle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>

        <TextView
            android:text="@string/info_first_section_content"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/principal_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_active_escenari">

            <TextView
                android:text="@string/info_second_section_title"
                style="@style/InfoTitle" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>
        <TextView
            android:text="@string/info_second_section_content"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/amfiteatre_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_active_escenari">

            <TextView
                android:text="@string/info_third_section_title"
                style="@style/InfoTitle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>
        <TextView
            android:layout_margin="20dp"
            android:text="@string/info_third_section_content"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/mirador_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_active_escenari">

            <TextView
                android:text="@string/info_fourth_section_title"
                style="@style/InfoTitle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_separator"/>
        <TextView
            android:text="@string/info_fourth_section_content"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>