<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MergeRootFrame">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/embassat_image"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingBottom="20dp">

                <com.embassat.view.ApercuTextView
                    android:text="@string/transport_title"
                    style="@style/InfoTitle" />
            </FrameLayout>

            <com.embassat.view.ApercuTextView
                android:text="@string/transport_text"
                style="@style/InfoText" />

            <com.embassat.view.ApercuTextView
                android:text="@string/transport_optionc"
                style="@style/InfoText" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>