<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_background"
    tools:ignore="MergeRootFrame">

    <include layout="@layout/toolbar"/>


    <LinearLayout
        android:id="@+id/days_header_tabbar"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:layout_weight="1">
            <com.embassat.view.ApercuTextView
                android:text="@string/horaris_tab1"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:layout_weight="1">
            <com.embassat.view.ApercuTextView
                android:text="@string/horaris_tab2"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:layout_weight="1">
            <com.embassat.view.ApercuTextView
                android:text="@string/horaris_tab3"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:layout_weight="1">
            <com.embassat.view.ApercuTextView
                android:text="@string/horaris_tab4"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/schedule_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>